Fixed layout issue with sidebar's items
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1071996 13f79535-47bb-0310-9956-ffa450edef68

--- a/rt/management-web/src/main/java/org/apache/cxf/management/web/browser/client/ui/resources/logbrowser.css
+++ b/rt/management-web/src/main/java/org/apache/cxf/management/web/browser/client/ui/resources/logbrowser.css
@@ -180,6 +180,23 @@
     padding: 2px 0 2px 10px;
 }
 
+.sidebarItem {
+   margin-top: 2px;
+   margin-bottom: 5px;
+}
+
+.sidebarHeader {
+   color:#666;
+   text-transform:uppercase;
+   letter-spacing:1px;
+   font-size: x-small;
+   border-bottom-style:solid;
+   border-bottom-color:#666;
+   border-width:1px;
+   margin-top: 10px;
+   margin-bottom: 5px;
+}
+
 .browserTabSubscriptionsSideBar {
     border-right: 1px solid #999999;
 }
@@ -257,7 +274,7 @@
 }
 
 .feedEntryUrlLabel {
-    color: grey;
+    color: gray;
     float: left;
 }
 
